# nautilus-shell

./: .clang-format  .clangd  CMakeLists.txt  README.md
include/: parser.h  strip.h
src/: nautilus.c  parser.c  strip.c
